<resources>
    <string name="app_name">human-machine interface</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Добро пожаловать в приложение для расчёта сопротивления.
        Для того, чтобы сделать расчёт нужных данных, выберите нужный тип сопротивления и количество элементов (до 6).
        Если значение в десятичных дробях - напишите число через точку, к примеру 5.25 После ввода значение нажмите кнопку расчитать.
        Помните, что значение сопротивления не может быть отрицательным или равно нулю.
    </string>
    <string name="value">Расчитать</string>
    <string name="type_connection">Выберите тип соединения</string>
    <string name="number_of_elements">Выберите количество элементов</string>
    <string name="rn1_tv">Rn1</string>
    <string name="rn2_tv">Rn2</string>
    <string name="rn4_tv">Rn4</string>
    <string name="rn5_tv">Rn5</string>
    <string name="rn3_tv">Rn3</string>
    <string name="rn6_tv">Rn6</string>
    <string name="formula">Используемая формула:</string>
</resources>

