<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_first_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/type1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/type_connection"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/type1" />

    <TextView
        android:id="@+id/type2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_of_elements"
        app:layout_constraintTop_toBottomOf="@id/spinner1" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/type2" />

    <TextView
        android:id="@+id/tv_r1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/rn1_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_r2"
        app:layout_constraintTop_toBottomOf="@id/spinner2" />

    <TextView
        android:id="@+id/tv_r3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/rn3_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner2" />

    <TextView
        android:id="@+id/tv_r2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rn2_tv"
        app:layout_constraintLeft_toRightOf="@id/tv_r1"
        app:layout_constraintRight_toLeftOf="@id/tv_r3"
        app:layout_constraintTop_toBottomOf="@id/spinner2" />

    <TextView
        android:id="@+id/tv_r4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/rn4_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_r1" />

    <TextView
        android:id="@+id/tv_r5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rn5_tv"
        app:layout_constraintLeft_toRightOf="@id/tv_r4"
        app:layout_constraintRight_toLeftOf="@id/tv_r3"
        app:layout_constraintTop_toBottomOf="@id/et_r2" />

    <TextView
        android:id="@+id/tv_r6"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/rn6_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_r3" />

    <EditText
        android:id="@+id/et_r1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_r1"
        tools:ignore="Autofill,LabelFor,TextFields"
        tools:text="365" />

    <EditText
        android:id="@+id/et_r3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_r2"
        tools:ignore="Autofill,LabelFor,TextFields"
        tools:text="365" />

    <EditText
        android:id="@+id/et_r2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/tv_r1"
        app:layout_constraintRight_toLeftOf="@id/tv_r3"
        app:layout_constraintTop_toBottomOf="@id/tv_r2"
        tools:ignore="Autofill,LabelFor,TextFields"
        tools:text="365"
        />

    <EditText
        android:id="@+id/et_r4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_r4"
        tools:ignore="Autofill,LabelFor,TextFields"
        tools:text="365" />

    <EditText
        android:id="@+id/et_r5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/tv_r4"
        app:layout_constraintRight_toLeftOf="@id/tv_r6"
        app:layout_constraintTop_toBottomOf="@id/tv_r5"
        tools:ignore="Autofill,LabelFor,TextFields"
        tools:text="365" />

    <EditText
        android:id="@+id/et_r6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_r6"
        tools:ignore="Autofill,LabelFor,TextFields"
        tools:text="365"
        />

    <Button
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/value"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
